--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,16 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy API requests to backend container
+    location /api/ {
+        # 'backend' is the service name in docker-compose, port 8000
+        proxy_pass http://backend:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
