--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # Proxy API requests to backend container
     location /api/ {
-        # 'backend' is the service name in docker-compose, port 8000
+        # 'backend' is the service name in docker-compose, port 8000 dfdfd
         proxy_pass http://backend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
